[package]
name = "blockstats"
version = "0.3.0"
edition = "2021"
rust-version = "1.56.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
description = "Monitor block statistics of cumulus based parachains."
keywords = ["substrate", "polkadot", "blockchain", "parachain", "parity"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/paritytech/blockstats"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3"  }
futures = "0.3"
subxt = { version = "0.32.1", features = ["substrate-compat"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
